--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 FastSplit/settings.py
+EsSplit/__pycache__/__init__.cpython-311.pyc
+EsSplit/__pycache__/admin.cpython-311.pyc
+EsSplit/__pycache__/apps.cpython-311.pyc
+EsSplit/__pycache__/forms.cpython-311.pyc
+EsSplit/__pycache__/models.cpython-311.pyc
+EsSplit/__pycache__/views.cpython-311.pyc
