--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
-FastSplit/settings.py
-EsSplit/__pycache__/__init__.cpython-311.pyc
-EsSplit/__pycache__/admin.cpython-311.pyc
-EsSplit/__pycache__/apps.cpython-311.pyc
-EsSplit/__pycache__/forms.cpython-311.pyc
-EsSplit/__pycache__/models.cpython-311.pyc
-EsSplit/__pycache__/views.cpython-311.pyc
+# Pliki tymczasowe Pythona (kompilowane)
+__pycache__/
+*.pyc
+*.pyo
+
+# Baza danych SQLite (lokalna)
+db.sqlite3
+
+# Pliki systemowe Maca (śmieci)
+.DS_Store
+
+# Wirtualne środowisko
+venv/
+.env
