Poprawione readme i pliki konf

--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,40 @@
-# Pliki tymczasowe Pythona (kompilowane)
+### Python
 __pycache__/
-*.pyc
-*.pyo
+*.py[cod]
+*.pyd
+*.so
 
-# Baza danych SQLite (lokalna)
-db.sqlite3
-
-# Pliki systemowe Maca (śmieci)
-.DS_Store
-
-# Wirtualne środowisko
+### Virtual environments
+.venv/
 venv/
-.env
+ENV/
+env/
 
-# Wynik collectstatic (generowane)
-staticfiles/
-
-# Logi
+### Django
 *.log
-debug.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+staticfiles/
+media/
 
-# Ustawienia IDE
+### Environment files
+.env
+.env.*
+!.env.example
+
+### OS junk
+.DS_Store
+Thumbs.db
+
+### IDEs
 .idea/
 .vscode/
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
-# Cache narzędzi
+### Tooling caches
 .pytest_cache/
 .mypy_cache/
 .ruff_cache/
