--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,7 @@ django-axes==8.1.0; python_version >= '3.10'
 django-csp==4.0
 django-recaptcha==4.1.0
 gunicorn==23.0.0
+pyotp==2.9.0
+qrcode[pil]==8.0
 sqlparse==0.5.5; python_version >= '3.8'
 whitenoise==6.9.0
